style.css
* {
  box-sizing: border-box;
}

.namecontainer {
  color: black;
  background-color: green;
  display: inline-block;
  border: 3px solid black;
  font-size: 2.5rem;
  padding: 3px 25px;
  margin-bottom: 5px;
}
.card.zoom {
  transform: scale(1);
}
.card {
  text-align: center;
  background-color: #A76C28;
  width: 32rem;
  border: 1px solid black;
  font-family: Verdana, Arial;
  box-sizing: border-box;
  padding: 5px;
  margin-bottom: 40px;
  margin-right: 40px;
  display: inline-block;
  transition: transform .2s;
  transform: scale(0.5);
}
.metercontainer {
  border: 4px solid black;
  width: 100%;
  display: inline-block;
}
.meter {
  height: 3rem;
}
.meter.level1 {
  width: 12.5%;
  background-color: #689966;
}
.meter.level2 {
  width: 25%;
  background-color: #669833;
}
.meter.level3 {
  width: 37.5%;
  background-color: #9bca68;
}
.meter.level4 {
  width: 50%;
  background-color: #fdcd30;
}
.meter.level5 {
  width: 62.5%;
  background-color: #ff9802;
}
.meter.level6 {
  width: 75%;
  background-color: #9a0004;
}
.meter.level7 {
  width: 87.5%;
  background-color: #670133;
}
.meter.level8 {
  width: 100%;
  background-color: #320131;
}
.statuscontainer {
  color: black;
  font-size: 1.25rem;
  margin-bottom: 5px;
  border: 2px solid black;
  display: inline-block;
  padding: 3px 25px;
  background-color: green;
}
.image {
  width: 100%;
  border: 4px solid black;
}
.infocontainer {
  border-spacing: 2px;
}
.infocontainer div {
  display: table-cell;
  border: 3px solid black;
  vertical-align: top;
  text-align: left;
  background-color: green;
  padding: 1px 10px;
}
.infocontainer ul {
  padding-left: 18px;
  margin: 8px 0px;
}
.threats {
  width: 30%;
}
.facts {
  width: 70%;
}
.infoheading {
  font-size: 1.5rem;
  text-align: center;
  margin: 8px 0px;
}

